modules/gdscript/tests/scripts/analyzer/errors/typed_dictionary_init_with_unconvertible_in_literal.gd
func test():
	var unconvertible := 1
	var typed: Dictionary[Object, Object] = { unconvertible: unconvertible }
	print('not ok')
